# ct312-topic2

./: .gitignore  AGENTS.md  README.md  docker-compose.yml  mean_datasets.md  pyproject.toml  run_server.sh
app/: README.md  requirements.txt  streamlit_app.py
data/topic2/edge_cases/: all_missing_feature.csv  constant_features.csv  duplicate_rows.csv  empty_rows.csv  extreme_outlier.csv  imbalanced_clusters.csv  infinite_values.csv  malformed_columns.csv  missing_labels.csv  mixed_type_labels.csv  partially_missing.csv  single_row.csv  sparse_density.csv  text_only.csv
data/topic2/examples/: seeds_kmeans.csv  spiral_dbscan.csv  user_knowledge_hierarchical.csv  user_knowledge_hierarchical_sample90.csv
docs/: topic2_dataset_notes.md
nignx/: nginx.conf
outputs/topic2/handoff/: topic2_visualization_contract.json
outputs/topic2/results/: seeds_kmeans_centroids.csv  seeds_kmeans_cluster_summary.csv  seeds_kmeans_metrics.json  seeds_kmeans_points.csv  seeds_kmeans_steps.csv  spiral_dbscan_cluster_summary.csv  spiral_dbscan_k_distance.csv  spiral_dbscan_metrics.json  spiral_dbscan_points.csv  spiral_kmeans_comparison_points.csv  topic2_algorithm_metrics.csv  user_knowledge_distance_matrix_preview.csv  user_knowledge_hierarchical_cluster_summary.csv  user_knowledge_hierarchical_merges.csv  user_knowledge_hierarchical_metrics.json  (+1 more)
scripts/topic2/: 01_prepare_demo_data.py  02_validate_handoff.py
src/ct312_topic2.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/topic2_clustering/: __init__.py  analysis.py  paths.py  plots.py
